# taiko

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  go.mod  index.html  server.go
public/: index.html
src/: allocator.cpp  allocator.h  app.cpp  app.h  asset_loader.cpp  asset_loader.h  assets.h  audio.cpp  audio.h  color.h  constants.h  debug_macros.h  dev_macros.h  editor.cpp  editor.h  events.cpp  events.h  font.cpp  font.h  game.cpp  game.h  input.cpp  input.h  main.cpp  main.ts  main_menu.cpp  main_menu.h  map.cpp  map.h  memory.h  serialize.h  systems.h  ui.cpp  ui.h  ui_test.cpp  ui_test.h  vec.h
